--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "wp:dev": "webpack --mode=development",
+    "wp:prod": "webpack --mode=production",
     "start": "node backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "nodemon backend/server.js"
@@ -22,5 +24,15 @@
     "mongoose": "^7.1.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1"
   }
 }
